change projects to projectz

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Allyson West</h1>
-    <p>N220 Projects</p>
+    <p>N220 Projectz</p>
     <p>Summers 2022</p>
   </body>
 </html>
