--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lab 1</title>
   </head>
   <body>
-    <h1>Allyson West</h1>
-    <p>N220 Projects</p>
-    <p>Summers 2022</p>
-
-    <h2>Lab 1</h2>
-    <p><a href="/labs/lab1/index.html"> First Example</a></p>
-
-    <h2>Lab 2</h2>
+    Todo: insert lab 1 here
   </body>
 </html>
