--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -7,6 +7,7 @@
     <title>Lab 1</title>
   </head>
   <body>
-    Todo: insert lab 1 here
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
