--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <h1>Allyson West</h1>
     <p>N220 Projects</p>
-    <p>Summers 2022</p>
+    <p>Summer 2022</p>
 
     <h2>Lab 1</h2>
-    <p><a href="/labs/lab1/index.html"> First Example</a></p>
+    <p><a href="/labs/lab1/index.html"> Lab 1 </a></p>
 
     <h2>Lab 2</h2>
+    <p><a href="/labs/lab2/index.html"> Lab 2 </a></p>
   </body>
 </html>
