--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <p><a href="/labs/lab1/index.html"> Lab 1 </a></p>
 
     <h2>Lab 2</h2>
-    <p><a href="/labs/lab2/index.html"> Lab 2 </a></p>
+    <p><a href="/labs/lab2/Ball Bounce/index.html"> Ball Bounce </a></p>
+    <p><a href="/labs/lab2/Counter/index.html"> Counter </a></p>
+    <p><a href="/labs/lab2/Puck Size/index.html"> Puck Size </a></p>
   </body>
 </html>
