--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <p><a href="/labs/lab1/index.html"> Lab 1 </a></p>
 
     <h2>Lab 2</h2>
-    <p><a href="../labs/lab2/BallBounce/index.html"> Ball Bounce </a></p>
+    <p>
+      <a href="../labs/lab2/BallBounce/index.html"> Ball Bounce </a>
+    </p>
     <p><a href="../labs/lab2/Counter/index.html"> Counter </a></p>
-    <p><a href="../labs/lab2/PuckSize/index.html"> Puck Size </a></p>
+    <p>
+      <a href="../labs/lab2/PuckSize/index.html"> Puck Size </a>
+    </p>
   </body>
 </html>
