updated circle pattern link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <p><a href="labs/lab2/PuckSize/index.html">Puck Size</a></p>
     <h2>Lab 3</h2>
     <p>
-      <a href="labs/lab3/CirclePattern/index.html"> </a> Circle Inside of
-      Circles
+      <a href="labs/lab3/CirclePattern/index.html">Circle Inside of Circles </a>
     </p>
     <p><a href="labs/lab1/index.html"> Lab 1 </a></p>
     <p><a href="labs/lab1/index.html"> Lab 1 </a></p>
