--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     </p>
     <p><a href="labs/lab2/Counter/index.html">Counter </a></p>
     <p><a href="labs/lab2/PuckSize/index.html">Puck Size</a></p>
+
     <h2>Lab 3</h2>
     <p>
       <a href="labs/lab3/CirclePattern/index.html">Circle Inside of Circles </a>
     </p>
-    <p><a href="labs/lab1/index.html"> Lab 1 </a></p>
-    <p><a href="labs/lab1/index.html"> Lab 1 </a></p>
+    <p><a href="labs/lab3/FizzBuzz/index.html"> FizzBuzz </a></p>
+    <p><a href="labs/lab3/LoopComposition/index.html"> Loop Composition </a></p>
   </body>
 </html>
