--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <p>
       <a href="labs/lab3/CirclePattern/index.html">Circle Inside of Circles </a>
     </p>
-    <p><a href="labs/lab3/FizzBuzz/index.html"> FizzBuzz </a></p>
-    <p><a href="labs/lab3/LoopComposition/index.html"> Loop Composition </a></p>
+    <p>
+      <a href="labs/lab3/FizzBuzz/index.html"> Fizz Buzz </a>
+    </p>
+    <p>
+      <a href="labs/lab3/LoopComposition/index.html"> Loop Composition </a>
+    </p>
   </body>
 </html>
