updating main index, finished dripping water

--- a/index.html
+++ b/index.html
@@ -31,5 +31,16 @@
     <p>
       <a href="labs/lab3/LoopComposition/index.html"> Loop Composition </a>
     </p>
+
+    <h2>Lab 4</h2>
+    <p>
+      <a href="labs/lab4/Neapolitan/index.html">Neapolitan</a>
+    </p>
+    <p>
+      <a href="labs/lab4/Dripping Water/index.html"> Dripping Water</a>
+    </p>
+    <p>
+      <a href="labs/lab4/ArrayComposition/index.html"> Array Composition </a>
+    </p>
   </body>
 </html>
