adding lab 5 folder & files

--- a/index.html
+++ b/index.html
@@ -42,5 +42,16 @@
     <p>
       <a href="labs/lab4/ArrayComposition/index.html"> Array Composition </a>
     </p>
+
+    <h2>Lab 5</h2>
+    <p>
+      <a href="labs/lab5/PeakPixels/index.html">Peak Pixels</a>
+    </p>
+    <p>
+      <a href="labs/lab5/LotOfDiv/index.html"> Lot of Div!</a>
+    </p>
+    <p>
+      <a href="labs/lab5/Over&Out/index.html"> Over & Out </a>
+    </p>
   </body>
 </html>
