--- a/labs/lab5/PeakPixels/index.html
+++ b/labs/lab5/PeakPixels/index.html
@@ -7,6 +7,11 @@
     <title>Peak Pixels</title>
   </head>
   <body>
+    <!-- Creating a button with id = "ourSquare" to communicate with app.js to style and change by 10% when clicked-->
+    <div>
+      <button id="ourSquare" onclick="increaseSize()"></button>
+    </div>
+    <!-- Linking p5 library and js file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="js/app.js"></script>
   </body>
