--- a/labs/lab5/LotOfDiv/index.html
+++ b/labs/lab5/LotOfDiv/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lot of Div</title>
+    <title>Lot of Div!</title>
+    <style>
+      #grid {
+        width: 20px;
+        height: 20px;
+        margin: 3px;
+        float: left;
+      }
+    </style>
   </head>
   <body>
+    <div id="grid"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="js/app.js"></script>
   </body>
