update lot of div

--- a/labs/lab5/LotOfDiv/index.html
+++ b/labs/lab5/LotOfDiv/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lot of Div!</title>
     <style>
+      /* Styling the div, making it 20px by 20px, with a line with point size 3px between each square, lined horizonally with float left*/
       #grid {
         width: 20px;
         height: 20px;
@@ -15,6 +16,7 @@
     </style>
   </head>
   <body>
+    <!-- Creating div with id grid -->
     <div id="grid"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="js/app.js"></script>
