--- a/labs/lab5/Over&Out/index.html
+++ b/labs/lab5/Over&Out/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Over & Out</title>
+    <title>Over and Out</title>
+    <style>
+      /*Styling the square, making it 100px by 100px */
+      #square {
+        background-color: #0e1478;
+        width: 100px;
+        height: 100px;
+      }
+    </style>
   </head>
   <body>
+    <!-- creating a div wth onmouseover and onmouseout set to functions made with js-->
+    <div
+      id="square"
+      onmouseover="hoverOn(newSquare)"
+      onmouseout="hoverAway(newSquare)"
+    ></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="js/app.js"></script>
   </body>
