adding lab 7 to index.html

--- a/index.html
+++ b/index.html
@@ -53,5 +53,18 @@
     <p>
       <a href="labs/lab5/Over&Out/index.html"> Over & Out </a>
     </p>
+
+    <h2>Lab 7</h2>
+    <p>
+      <a href="labs/lab7/Greeter/index.html">Greeter</a>
+    </p>
+    <p>
+      <a href="labs/lab7/Distance Calculator /index.html">
+        Distance Calculator</a
+      >
+    </p>
+    <p>
+      <a href="labs/lab7/Number Guesser/index.html"> Number Guesser </a>
+    </p>
   </body>
 </html>
