--- a/labs/N220Final/index.html
+++ b/labs/N220Final/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Concentration</title>
+    <title>Concentration!</title>
   </head>
   <body>
     <div class="grid-wrapper">
