--- a/labs/N220Final/index.html
+++ b/labs/N220Final/index.html
@@ -9,42 +9,43 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Concentration!</title>
+    <script src="js/app.js"></script>
+    <title>Concentration Game!</title>
   </head>
   <body>
+    <!-- Setting up the grid by columns and rows-->
     <div class="grid-wrapper">
       <div class="score">Score:</div>
       <div class="score-wrapper">
         <i class="fa-solid fa-star"></i>
-        <div class="score-results">1</div>
+        <div class="score-results"></div>
       </div>
       <h1 class="instructions">Concentration!</h1>
       <h3 class="instructions">Two Alike Cards Gives A Match! Click & Play!</h3>
       <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
       </div>
       <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
       </div>
       <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
       </div>
       <div class="row">
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
-        <div class="column"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
       </div>
     </div>
-    <script src="js/app.js"></script>
   </body>
 </html>
