adding final to index

--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
     <p>
       <a href="labs/lab7/Number Guesser/index.html"> Number Guesser </a>
     </p>
+    <h2>Final</h2>
+    <a href="labs/N220Final/index.html"></a>
   </body>
 </html>
