adding final link to index

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
       <a href="labs/lab7/Number Guesser/index.html"> Number Guesser </a>
     </p>
     <h2>Final</h2>
-    <a href="labs/N220Final/index.html"></a>
+    <a href="labs/N220Final/index.html"> Concentration Game</a>
   </body>
 </html>
