--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
     <p>
       <a href="labs/lab7/Number Guesser/index.html"> Number Guesser </a>
     </p>
+
+    <h2>Array Computations</h2>
+    <a href="labs/ArrayComput/itsjustAverage/index.html">
+      It's Just Average! Calculator</a
+    >
+
     <h2>Final</h2>
     <a href="labs/N220Final/index.html"> Concentration Game</a>
   </body>
