--- a/labs/lab8/DivisibleSeven/index.html
+++ b/labs/lab8/DivisibleSeven/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Show Info!</title>
+    <title>Divisble By Seven</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="grid-wrapper">
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
+    <div class="wrapper">
+      <h1>Is It Divisble By Seven?</h1>
+      <!-- creating input + button; make sure to pass function-->
+      <input id="getNum" type="text" />
+      <button onclick="testSeven()">Check</button>
+      <!-- div to put our results in-->
       <div id="results"></div>
     </div>
     <script src="js/app.js"></script>
