updating index.html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
       <a href="labs/lab7/Number Guesser/index.html"> Number Guesser </a>
     </p>
 
+    <h2>Lab 8</h2>
+    <ap>
+      <a href="labs/lab8/ChangeStyles/index.html"> Change Styles </a>
+    </p>
+    <p>
+      <a href="labs/lab8/DivisibleSeven/index.html">
+        Divisible By Seven</a>
+    </p>
+    <p>
+      <a href="labs/lab8/ShowInfo/index.html"> Show Info </a>
+    </p>
+
+
     <h2>Array Computations</h2>
     <a href="labs/ArrayComput/itsjustAverage/index.html">
       It's Just Average! Calculator</a
