--- a/labs/lab8/ShowInfo/index.html
+++ b/labs/lab8/ShowInfo/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <div class="grid-wrapper">
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
-      <button onclick="grabString()">What Color Am I?</button>
+      <button onclick="grabString(0)">What Color Am I?</button>
+      <button onclick="grabString(1)">What Color Am I?</button>
+      <button onclick="grabString(2)">What Color Am I?</button>
+      <button onclick="grabString(3)">What Color Am I?</button>
+      <button onclick="grabString(4)">What Color Am I?</button>
       <div id="results"></div>
     </div>
     <script src="js/app.js"></script>
