--- a/labs/lab9/Flash Cards/index.html
+++ b/labs/lab9/Flash Cards/index.html
@@ -5,25 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flash Cards</title>
-    <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <h1>Fun Fact Flash Cards!</h1>
-    <div class="button-wrapper">
-      <button onclick="askQuestion(event)" data-answer="A crocodile">
-        What animal cannot stick out it's tongue?
-        <!--Crocodile-->
-      </button>
-      <button onclick="askQuestion(event)" data-answer="It's heart">
-        Where is a shrimp's heart located?
-        <!--its head-->
-      </button>
-      <button onclick="askQuestion(event)" data-answer="Sudan">
-        Which country has the most pyramids?
-      </button>
-      <!--Sudan-->
-      <div class="results"></div>
-    </div>
-    <script src="js/app.js"></script>
-  </body>
+  <body></body>
 </html>
