updatin' the index

--- a/index.html
+++ b/index.html
@@ -82,9 +82,13 @@
 
     <h2>Array Computations</h2>
     <a href="labs/ArrayComput/itsjustAverage/index.html">
-      It's Just Average! Calculator</a
-    >
+      It's Just Average! Calculator</a>
 
+    <a href="labs/ArrayComput/Bad Words/index.html">
+      Bad Words!</a>
+      <h2>Array Computations</h2>
+    <a href="labs/ArrayComput/makeDivs/index.html">
+      Make A Div!</a>
     <h2>Final</h2>
     <a href="labs/N220Final/index.html"> Concentration Game</a>
   </body>
