--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
        <a href="labs/ArrayComput/makeDivs/index.html">
       Make A Div!</a>
     </p>
+
+    <h2>HTML Events</h2>
+    <p>
+       <a href="labs/lab9/Color Mixer/index.html">
+      Color Mixer</a>
+    </p>
+    <p>
+      <a href="labs/lab9/colorChanger/index.html">
+      Color Changer</a>
+    </p>
+    <p>
+       <a href="labs/lab9/Flash Cards/index.html">
+      Flash Cards</a>
+    </p>
    
     <h2>Final</h2>
     <a href="labs/N220Final/index.html"> Concentration Game</a>
