--- a/labs/lab9/Color Mixer/index.html
+++ b/labs/lab9/Color Mixer/index.html
@@ -8,13 +8,33 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="mixer-wrapper">
-      <div class="grid-wrapper">
-        <div class="redSection">
-          <button id="addOne"></button>
-        </div>
+    <div class="header">
+      <h1>Color Mixer!</h1>
+      <div class="colorBlock"></div>
+      <h3>RGB VAL</h3>
+      <div class="value"></div>
+    </div>
+    <div class="button-wrapper">
+      <h3>R</h3>
+      <div class="mainButton" id="redAdjust">
+        <div class="button" onclick="redPlusone()" id="redButton1">+1</div>
+        <div class="button" id="redButton5">+5</div>
+        <div class="button" id="redButton10">+10</div>
+      </div>
+      <h3>G</h3>
+      <div class="mainButton" id="greenAdjust">
+        <div class="button" id="greenButton1">+1</div>
+        <div class="button" id="greenButton5">+5</div>
+        <div class="button" id="greenButton10">+10</div>
+      </div>
+      <h3>B</h3>
+      <div class="mainButton" id="blueAdjust">
+        <div class="button" id="blueButton1">+1</div>
+        <div class="button" id="blueButton5">+5</div>
+        <div class="button" id="blueButton10">+10</div>
       </div>
     </div>
+
     <script src="js/app.js"></script>
   </body>
 </html>
